src/test/deca/syntax/invalid/homemade/else_then_if.deca
// Description :
//      program with wrong order of if else
//
// Results :
//
// History :
//      created on 11/01/2020

{
    else {
        print("ayaya");
    } if (true) {
        print("ayaya");
    }
}